# NYU

./: .gitignore  budgie_bot.bat  teleop.py
arduino/: Circuit_10.ino
bonsai/: arduino.csv  call_and_response.bonsai  motor_response.bonsai  video_timestamps.csv
bonsai/.bonsai/Settings/: call_and_response.editor  call_and_response.layout  motor_response.editor  motor_response.layout
budgie/: LICENSE  Makefile  README.md  pyproject.toml
budgie-bot/: config.ini  pyproject.toml
budgie-bot/scripts/: bird_detector.py  detect_bg.py  detect_bird.py
budgie-bot/src/budgie_bot/: amplitude.py  audio_visualizer.py  main.py
budgie-bot/src/budgie_bot/detectors/: background.py  snapshot.py  yolo.py
budgie-bot/tests/: test_audio_visualizer.py
budgie/budgie/: __init__.py  dataset.py  features.py  plots.py
budgie/budgie/modeling/: predict.py  train.py
budgie/docs/: mkdocs.yml
budgie/docs/docs/: index.md
budgie/notebooks/: 0.1-jaehho-cosine-sim.ipynb  0.2-jaehho-cosine-sim-organized.ipynb  0.3-jaehho-fundamental_f.ipynb  birdsong_pipeline_demo.ipynb  birdsong_unsupervised_pipeline.ipynb
budgie_bot/: .gitignore  pixi.toml
budgie_bot/src/: requirements.txt
budgie_bot/src/budgie_bot/: package.xml  setup.cfg  setup.py
budgie_bot/src/budgie_bot/budgie_bot/: audio_rms.py  audio_spectrogram.py  bird_detector.py  camera.py  react_behavior.py
budgie_bot/src/budgie_bot/budgie_bot/detectors/: yolo.py
budgie_bot/src/budgie_bot/config/: system_config.yaml
budgie_bot/src/budgie_bot/launch/: bird_detector.launch.py  full_system.launch.py
budgie_bot/src/budgie_bot/scripts/: set_bg_gui.py
budgie_bot/src/custom_interfaces/: CMakeLists.txt  package.xml
budgie_bot/src/custom_interfaces/srv/: SetBG.srv
classification/: log_audioandneural_clustering.m
python/: audio_stream.py  config.ini  main.py  pyproject.toml  requirements.txt  spectrogram.py
python/scripts/: audio_list.py  audio_view.py  scan_arduino.py
python/src/budgie_bot/detectors/: bg_subtract.py
python/tests/: test_cv.py  test_motor.py  test_sounddevice.py
song_analysis/: main.py  requirements.txt
