[project]
name = "budgie-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaeho Cho",email = "jaeho2025@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice",
    "numpy",
    "matplotlib",
    "pyfirmata2",
    "ultralytics",
    "torch"
]

[tool.poetry]
packages = [{include = "budgie_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
